--- a/style.css
+++ b/style.css
@@ -254,3 +254,8 @@ gap: 0.5rem;
         width: 100%;
     }
 }
+.product.selected {
+    border: 3px solid #ff0000;
+    border-radius: 10px;
+    background: rgba(0, 255, 98, 0.15);
+}
